--- a/app_update_check.json
+++ b/app_update_check.json
@@ -3,11 +3,12 @@
   "enabled": true,
 "majorMsg": {
   "title": "Important App update",
-  "msg": "Please update your app to the latest version to continue using it."
+  "msg": "Please update your app to the latest version to continue using it.",
   "btn": "Download"
+},
 "minorMsg": {
   "title": "App update available",
-  "msg": "There's a new version available, would you like to get it now?"
+  "msg": "There's a new version available, would you like to get it now?",
   "btn": "Download"
   }
 }
