--- a/app_update_check.json
+++ b/app_update_check.json
@@ -1,6 +1,6 @@
 {
   "current": "1.1.0",
-  "enabled": false,
+  "enabled": true,
   "majorMsg": {
     "title": "Important App update",
     "msg": "Please update your app to the latest version to continue using it.",
