--- a/app_update_check.json
+++ b/app_update_check.json
@@ -8,7 +8,7 @@
   },
   "minorMsg": {
     "title": "App update available",
-    "msg": "There's a new version available, would you like to get it now?",
+    "msg": "There's a new version available that improves performance. Please get it now.",
     "btn": "Download"
   }
 }
